5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1811_2567.log
== TEST (2019-06-04 21:12:12) 
-- CODE:
x=int(input("Digite um numero: "))
f="*"*x
print(f)
-- OUTPUT:
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 21:13:47) 
-- CODE:
x=int(input("Digite um numero: "))
f="*"
for i in range(1,x+1):
	f=f*i
	print(f)
-- OUTPUT:
*
**
******
************************
************************************************************************************************************************
************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************************
*************************************************************************************************************************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 21:14:31) 
-- CODE:
x=int(input("Digite um numero: "))
f="*"
for i in range(1,x+1):
	f=f*i
	print(f)
	f=f/i
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    f=f/i
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 21:15:01) 
-- CODE:
x=int(input("Digite um numero: "))
f="*"
for i in range(1,x+1):
	f="*"
	f=f*i
	print(f)
	
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 21:17:56) 
-- CODE:
x=int(input("Digite um numero: "))
m=arrange(x+1)
print(m)
for i in range(1,x+1):
	f="*"
	f=f*i
	print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    m=arrange(x+1)
NameError: name 'arrange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 21:18:28) 
-- CODE:
from numpy import*
x=int(input("Digite um numero: "))
m=arrange(x+1)
print(m)
for i in range(1,x+1):
	f="*"
	f=f*i
	print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 21:18:49) 
-- CODE:
from numpy import*
x=int(input("Digite um numero: "))
m=arange(x+1)
print(m)
for i in range(1,x+1):
	f="*"
	f=f*i
	print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 21:19:54) 
-- CODE:
from numpy import*
x=int(input("Digite um numero: "))
m=arange(x+1)
m=-1
for i in m:
	f="*"
	f=f*m[h]
	print(f)
	h=h-1

for i in range(1,x+1):
	f="*"
	f=f*i
	print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 21:20:30) 
-- CODE:
from numpy import*
x=int(input("Digite um numero: "))
m=arange(x+1)
h=-1
for i in m:
	f="*"
	f=f*m[h]
	print(f)
	h=h-1

for i in range(1,x+1):
	f="*"
	f=f*i
	print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 21:20:48) 
-- CODE:
from numpy import*
x=int(input("Digite um numero: "))
m=arange(x+1)
h=-1
for i in m:
	f="*"
	f=f*m[h]
	print(f)
	h=h-1

for i in range(1,x+1):
	f="*"
	f=f*i
	print(f)
	
-- EXECUTION TIME:
1.15375
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 21:19:28) 
-- CODE:
from numpy import*
x=int(input("Digite um numero: "))
m=arange(x+1)
h=-1
for i in m:
	f="*"
	f=f*m[h]
	print(f)
	h=h-1

for i in range(1,x+1):
	f="*"
	f=f*i
	print(f)
	
-- EXECUTION TIME:
0.981056
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:54:17) 
-- CODE:
from numpy import*
x=int(input("Digite um numero: "))
m=arange(x+1)
print(m)
h=-1
for i in m:
	f="*"
	f=f*m[h]
	print(f)
	h=h-1

for i in range(1,x+1):
	f="*"
	f=f*i
	print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
